--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "node-fetch": "^2.6.1",
+    "follow-redirects": "1.14.1",
     "socket.io-client": "3.0.1"
   }
 }
